# dota2clone

./: .cursorrules  .gitignore  AGENTS.md  BUGFIX_REPORT.md  BUILD.md  CMakeLists.txt  DX12_MIGRATION_TODO.md  GAME_TROUBLESHOOTING.md  NETWORK_IMPLEMENTATION_SUMMARY.md  QUICK_START_AUTH.md  QUICK_START_PUBLIC_SERVER.md  README.md  TERRAIN_SCULPTING_SUCCESS.md  TERRAIN_STABILITY_REPORT.md  Todos.md  World_Comparison_Analysis.md  auth.db  auth.db-shm  auth.db-wal  build_release.bat  check_server_status.bat  debug_layer_demo.cpp  demo_CMakeLists.txt  diagnose_port.bat  port_forwarding_checklist.md  run_game_with_console.bat  run_game_with_logs.bat  settings.json  start_auth_server.bat  test_deferred_deletion.md  test_matchmaking_local.bat
docs/: AuthDatabase_Setup.md  AuthServer_QuickStart.md  CSS_Audit.md  CSS_Comparison.md  CSS_README.md  CreepSystem_Improvements.md  DedicatedServer_QuickStart.md  Flexbox_Guide.md  Flexbox_Implementation_Summary.md  Flexbox_Testing.md  GameIntegration_Plan.md  GameMode_Testing.md  HotReload_Guide.md  HotReload_QuickStart.md  LightingSystem.md  NetworkArchitecture.md  NetworkRefactoring_Phase1_Summary.md  PanoramaUI.md  PublicServer_Setup.md  Session_Summary.md  TailwindCSS_Approach.md  Tailwind_CheatSheet.md  Tailwind_Summary.md  TerrainAndLighting_Summary.md  TerrainTools.md  Testing_Guide.md  Visual_Comparison.txt
scripts/: add_mm_test_users.cpp  add_test_user.bat  add_test_user.sql  init_auth_db.bat  init_auth_db.sql
src/: CMakeLists.txt  imgui_impl_dx12_patched.cpp  main.cpp
src/auth/: AuthClient.cpp  AuthClient.h  AuthProtocol.cpp  AuthProtocol.h  AuthServer.cpp  AuthServer.h  CMakeLists.txt  DatabaseManager.cpp  DatabaseManager.h  SecurityManager.cpp  SecurityManager.h  add_test_user_tool.cpp  auth_server_main.cpp
src/client/: CMakeLists.txt  ClientWorld.cpp  ClientWorld.h
src/common/: CMakeLists.txt  GameInput.h  GameSnapshot.h  IGameWorld.h  NetworkTypes.h
src/core/: CMakeLists.txt  MathUtils.cpp  MathUtils.h  Timer.cpp  Timer.h  Types.h
src/game/: CMakeLists.txt  DebugConsole.cpp  DebugConsole.h  GameData.h  GameMain.cpp  GameState.cpp  GameState.h  GameStateManager.cpp  GameUI.cpp  GameUI.h  SettingsManager.cpp  SettingsManager.h
src/game/states/: HeroPickState.cpp  HeroesState.cpp  InGameState.cpp  LoadingState.cpp  LoginState.cpp  MainMenuState.cpp  RegisterState.cpp
src/game/ui/: CMakeLists.txt
src/game/ui/login/: LoginFooter.cpp  LoginFooter.h  LoginForm.cpp  LoginForm.h  LoginForm_Tailwind_Example.cpp  LoginHeader.cpp  LoginHeader.h  RegisterForm.cpp  RegisterForm.h
src/game/ui/mainmenu/: MainMenuBottomBar.cpp  MainMenuBottomBar.h  MainMenuContent.cpp  MainMenuContent.h  MainMenuTopBar.cpp  MainMenuTopBar.h
src/game/ui/panels/: MatchmakingPanel.cpp  MatchmakingPanel.h  ReconnectPanel.cpp  ReconnectPanel.h  SettingsPanel.cpp  SettingsPanel.h
src/game/ui/panorama/: CLayoutFile.cpp  CLayoutFile.h  CMakeLists.txt  CPanel2D.cpp  CPanel2D.h  CPanelWidgets.cpp  CStyleSheet.cpp  CStyleSheet.h  CUIEngine.cpp  CUIEngine.h  CUIRenderer.cpp  CUIRenderer.h  CUIRenderer_DX12.cpp  CUITextSystem.cpp  CUITextSystem.h  FontAtlas.cpp  FontAtlas.h  GameEvents.cpp  GameEvents.h  PanoramaTypes.h
src/game/ui/panorama/core/: CPanel2D.cpp  CPanel2D.h  CStyleHotReload.cpp  CStyleHotReload.h  CUIEngine.cpp  CUIEngine.h  PanoramaTypes.h
src/game/ui/panorama/hud/: CAbilityPanel.cpp  CAbilityPanel.h  CHUDManager.cpp  CHUDManager.h  CHeroUnitFrame.cpp  CHeroUnitFrame.h  CItemPanel.cpp  CItemPanel.h  CMinimap.cpp  CMinimap.h  CNotificationManager.cpp  CNotificationManager.h  CScoreboard.cpp  CScoreboard.h  CTooltip.cpp  CTooltip.h  HUDComponents.h
src/game/ui/panorama/layout/: CLayoutFile.cpp  CLayoutFile.h  CStyleSheet.cpp  CStyleSheet.h  FlexLayout.cpp  FlexLayout.h
src/game/ui/panorama/rendering/: CUIRenderer.cpp  CUIRenderer.h  CUIRenderer_DX12.cpp  CUITextSystem.cpp  CUITextSystem.h  FontAtlas.cpp  FontAtlas.h
src/game/ui/panorama/shaders/: UIShaders.hlsl
src/game/ui/panorama/widgets/: CButton.cpp  CButton.h  CDropDown.cpp  CDropDown.h  CImage.cpp  CImage.h  CLabel.cpp  CLabel.h  CPanelWidgets.cpp  CPanelWidgets.h  CProgressBar.cpp  CProgressBar.h  CSlider.cpp  CSlider.h  CTextEntry.cpp  CTextEntry.h
src/gameplay/: CMakeLists.txt  GameplayController.cpp  GameplayController.h
src/network/: CMakeLists.txt  MatchmakingClient.cpp  MatchmakingClient.h  MatchmakingProtocol.cpp  MatchmakingProtocol.h  MatchmakingTypes.h  NetworkClient.cpp  NetworkClient.h  NetworkCommon.h  NetworkServer.cpp  NetworkServer.h
src/properties/: CMakeLists.txt  Properties.cpp  Properties.h
src/renderer/: CMakeLists.txt  DirectXRenderer.cpp  DirectXRenderer.h  LightingSystem.cpp  LightingSystem.h  ShadowMapping.cpp  ShadowMapping.h  SkyRenderer.cpp  SkyRenderer.h  WireframeGrid.cpp  WireframeGrid.h
src/serialization/: CMakeLists.txt  MapIO.cpp  MapIO.h
src/server/: CMakeLists.txt  DedicatedServer.cpp  MatchmakingCoordinator.cpp  ServerWorld.cpp  ServerWorld.h
src/ui/: CMakeLists.txt  EditorCamera.cpp  EditorCamera.h  EditorUI.cpp  EditorUI.h  GameMode.cpp  GameMode.h  Picking.cpp  Picking.h
src/world/: AnimationSystem.cpp  AnimationSystem.h  CMakeLists.txt  CollisionSystem.cpp  CollisionSystem.h  Components.cpp  Components.h  CreepSpawnSystem.cpp  CreepSpawnSystem.h  CreepSystem.cpp  CreepSystem.h  EntityManager.cpp  EntityManager.h  HeroSystem.cpp  HeroSystem.h  MeshGenerators.cpp  MeshGenerators.h  ParticleSystem.cpp  ParticleSystem.h  ProjectileSystem.cpp  ProjectileSystem.h  System.h  TerrainChunks.cpp  TerrainChunks.h  TerrainMesh.cpp  TerrainMesh.h  TerrainRaycast.cpp  TerrainRaycast.h  TerrainTools.cpp  TerrainTools.h  TowerSystem.cpp  TowerSystem.h  World.cpp  World.h  WorldAdapter.cpp  WorldLegacy.cpp  WorldLegacy.h  World_minimal.cpp  World_new.cpp  World_test.cpp  (+1 more)
tests/: CMakeLists.txt  minidump_inspect.cpp  smoke_main.cpp  test_auth_client.cpp  test_auth_protocol.cpp  test_database_manager.cpp  test_login_validation.cpp  test_matchmaking_auth.cpp  test_security_manager.cpp  test_security_properties.cpp
(+15 files in other folders)
